# chatty-channels

./: .gitignore  .gitmodules  .roorules-test  CLAUDE.md  DELETED-LogicParameterServiceTests.swift  LICENSE  README.md  chatHistory.json  chattychannels.txt  chattychannels2.txt  nvfe.txt
.github/workflows/: ci.yml
AIplayer/AIplayer/: AIplayer.jucer  CMakeLists.txt  CMakePresets.json
AIplayer/AIplayer/Builds/MacOSX/: Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
AIplayer/AIplayer/Builds/MacOSX/AIplayer.xcodeproj/: project.pbxproj
AIplayer/AIplayer/Builds/MacOSX_1/: Info-AU.plist
AIplayer/AIplayer/Builds/MacOSX_1/AIplayer.xcodeproj/: project.pbxproj
AIplayer/AIplayer/JuceLibraryCode/: CMakeLists.txt  JuceHeader.h  JucePluginDefines.h
AIplayer/AIplayer/Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RMSCircularBuffer.cpp  RMSCircularBuffer.h
AIplayer/AIplayer/Source/Audio/: AudioMetrics.cpp  AudioMetrics.h  BandEnergyAnalyzer.cpp  BandEnergyAnalyzer.h  CalibrationToneGenerator.cpp  CalibrationToneGenerator.h  FFTProcessor.cpp  FFTProcessor.h  FrequencyAnalyzer.cpp  FrequencyAnalyzer.h  RMSCircularBuffer.cpp  RMSCircularBuffer.h
AIplayer/AIplayer/Source/Communication/: OSCManager.cpp  OSCManager.h  PortManager.cpp  PortManager.h  TelemetryService.cpp  TelemetryService.h
AIplayer/AIplayer/Source/Core/: Constants.h  Logger.cpp  Logger.h
AIplayer/AIplayer/Source/Models/: TelemetryData.h  TrackInfo.h
AIplayer/AIplayer/Source/Tests/: FFTProcessorTests.cpp  TelemetryIntegrationTests.cpp  TestRunner.cpp
AIplayer/AIplayer/Tests/: CMakeLists.txt  PluginProcessorTests.cpp  RMSBufferTests.cpp
AIplayer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ChattyChannels/: LICENSE
ChattyChannels.xcresult/: Info.plist
ChattyChannels.xcresult/Data/: data.0~51-GVrtilv47w2FuksViZhAqcYt_s_v5chBZ0GGYqdkTGWvZizxee7P1tycjesih_YJln5HYc8WHkjfICbXNtQ==  data.0~EEpPneUdcahhdRNmAIbD_z_08ETjSX8FBvDwYV-LrDp5gc3q1rhw5KDDSJ_Uu8moHZhGaysx354Wm_E8eu2Ccw==  data.0~Hoe8rdlr3Vw_6mxstBa_LCQ6wqghgEYpRfBsMHSZcMUwoxZlQHvQodd7ZejuBnJPpEsB6iZO77oXiEkMuK_rKQ==  data.0~bGdL7ZiMr4RjULFIubBsmkohGVuDK0RDla43DlEf_urcOE1Y7XdNrbFKRcB0i-3rsJ2nfAENhtlQaWi__3meoA==  data.0~gb37k5cElEXD37nw2T4_ZmwIT_Ua2Ibdgz_DA3y8XhRcG2r1CA7Oq38z038qKnjW-YWpLxfMRe1Kj00l7yT2xg==  refs.0~51-GVrtilv47w2FuksViZhAqcYt_s_v5chBZ0GGYqdkTGWvZizxee7P1tycjesih_YJln5HYc8WHkjfICbXNtQ==  refs.0~EEpPneUdcahhdRNmAIbD_z_08ETjSX8FBvDwYV-LrDp5gc3q1rhw5KDDSJ_Uu8moHZhGaysx354Wm_E8eu2Ccw==
ChattyChannels/ChattyChannels/: AppleScriptService.swift  BottomWoodenStripView.swift  ChatModel.swift  ChattyChannels.entitlements  ChattyChannelsApp.swift  ClaudeProvider.swift  Color+Extensions.swift  Config.plist  Config.plist.sample.plist  ContentView.swift  EmergencyDebugView.swift  GeminiProvider.swift  GrokProvider.swift  GrowingTextInput.swift  Info.plist  KickVolumeController.swift  LLMProvider.swift  LogicParameterService.swift  MessageBubble.swift  NetworkService.swift  OSCService.swift  OpenAIProvider.swift  PIDController.swift  PlaybackSafeProcessRunner.swift  TemporaryContentView.swift  TrackMappingService.swift
ChattyChannels/ChattyChannels.xcodeproj/: project.pbxproj
ChattyChannels/ChattyChannels.xcresult/: Info.plist
ChattyChannels/ChattyChannelsTests/: AppleScriptServiceTests.swift  CalibrationServiceTests.swift  CalibrationServiceTests.swift.OLD  ChattyChannelsTests.swift  ClaudeProviderTests.swift  GeminiProviderTests.swift  GrokProviderTests.swift  LogicParameterServiceTests.swift  MappingTests.swift  MappingTests.swift.OLD  NetworkServiceTests.swift  OSCRetryTests.swift  OSCServiceTests.swift  OpenAIProviderTests.swift  PIDControllerTests.swift  PlaybackSafeTests.swift
ChattyChannels/ChattyChannelsUITests/: ChattyChannelsUITests.swift  ChattyChannelsUITestsLaunchTests.swift  VUMeterUITests.swift
ChattyChannels/docs/: calibration_new.md
VUMeterTests-DELETE-ME/: AudioLevelTests.swift
database/: README.md  docker-compose.yml  schema.sql
docs/: POSTGRESQL_MIGRATION.md  accessibility.md  aiplayer-fft-implementation.md  calibration.md  find_channels.md  iterations.md  llm_selection.md  orchestrator-architecture-plan.md  osc-implementation-summary.md  osc-improvement.md  oscillator.md  plan.md  port-management-plan.md  v0.5-implementation-plan.md  v0.7-implementation-summary.md  v0.7-progress-summary.md  v0.7-refactoring-plan.md  v0.7-summary.md  v0.7-test-harness-summary.md  v0.8-plan.md  v5_interim.md
docs/logs/: test_axlayoutitem.sh  test_axlayoutitem_js.sh  test_track_mapping.sh
docs/refactor/: aiplayer-refactor.md
docs/vu/: aiplayer-vu-meter-fixes.md  v0.7_vu_integration_plan.md  vu-plan-3d.md  (+1 more)
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
scripts/: migrate_sqlite_to_postgres.swift  setup_database.sh
sub-projects/: README.md
tests/: clear_db.sh  test_applescript.sh  test_calibration_applescript.sh  update_juce_paths.py
(+110 files in other folders)
